make python tests